--- a/VRChat/59/1077959.html
+++ b/VRChat/59/1077959.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Dyl3gFK1+4y4PEuESSmVHUQHNoc+BorZviBD2WkcqFY="></script>
+    "MkAuzoOdDKcP6oBmcrM0rTjt0KIKFm6MKzOzKrNLMqU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat向け】因幡はねる 同人モデル","description":"有閑喫茶あにまーれ 因幡はねるの同人3Dモデルです!!\n(ねるちゃんのファンが作成したものです)\n\n是非ねるちゃんになって遊んでみてください!!\n\n\n揺れ物、表情等設定済みなので、UnityPackageを読み込んですぐにアップロードできます!\n(揺れ物の実装には、各自でDynamicBoneをご用意いただく必要があります)\n\n\n内容物\n\n・UnityPackageデータ\n　　モデルポリゴン数 18962\n　　(VRC SDK上での表示ポリゴン数)\n\n・取り扱い説明書\n\n\nニコニ立体にて、ポリゴン未削減版をご覧いただけます!!是非ご覧ください!!!\nhttps://3d.nicovideo.jp/works/td45927\n\n\n\"ファイルDL\"と\"作った人にごはんをおごる\"からDLできるファイルは同じです。お好きな方をお選びください。\n","url":"https://booth.pm/ja/items/1077959","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"500"},"image":"https://booth.pximg.net/c/620x620/96e607b6-d0b4-45be-93a9-04c0ca140e9c/i/1077959/77c18573-d0ec-4f2f-8af8-19d54a60a3e4_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Dyl3gFK1+4y4PEuESSmVHUQHNoc+BorZviBD2WkcqFY="></script>
+    nonce="MkAuzoOdDKcP6oBmcrM0rTjt0KIKFm6MKzOzKrNLMqU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1077959/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               251
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1077959/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               251
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
