--- a/VRChat/74/1078474.html
+++ b/VRChat/74/1078474.html
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "emCMjjji6Xh+f/v8+YoCo5FzTDA+23rTxHguZG1qPnE="></script>
+    "PKHO67lSepNfI95X1hmcG4XhHHvboX9TNAU/wPk8dnE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"視野角変更シェーダー(Change FoV Shader)+おまけ5種 ver1.1","description":"このシェーダーを適用したメッシュ越しにみると視野角が変わったように見えるよ！視野角60度固定のVRカメラやデスクトップでのスクショもこのシェーダー越しに撮影すれば歪みを少なくできるよ！\n\nおまけで、法線可視化シェーダー、ワイヤーフレームシェーダー、メタリック化シェーダー、テクスチャ貼り付けシェーダー、カメラを使わない3Dスキャンシェーダーもついてるよ！\n\n節度をまもって他人の迷惑にならないように使ってね！","url":"https://booth.pm/ja/items/1078474","offers":{"priceCurrency":"JPY","@type":"Offer","price":"230"},"image":"https://booth.pximg.net/c/620x620/a7137b00-b4ea-4679-a5bd-dc626e07566a/i/1078474/d459232e-c53d-4cbc-9afd-9ca2a7a74901_base_resized.jpg"}
     </script>
@@ -86,16 +86,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="emCMjjji6Xh+f/v8+YoCo5FzTDA+23rTxHguZG1qPnE="></script>
+    nonce="PKHO67lSepNfI95X1hmcG4XhHHvboX9TNAU/wPk8dnE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +116,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -133,7 +132,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -175,7 +175,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1078474/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               129
@@ -190,14 +190,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1078474/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               129
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
