--- a/VRChat/91/1078191.html
+++ b/VRChat/91/1078191.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "cBj8hbp54M9XHFLPvdgIMXMAy7Ud1+eLmAZMTvHXflA="></script>
+    "D2/uXoFu+tHF96lIxHTtFPmGLvBd524kZc4eF3CK5Lo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル３Dモデル「Livaiathan Type.A」Ver1.0  +他3種","description":"超蔟式オリジナルモデル第2弾。\nLivaiathan。TypeA、TypeA-2、TypeDとその試作機を提供します。\n\nVRChat想定で制作されていますが配信、ゲームコンテンツなどに収益化状態を問わず運用可能です。\n\n試作機を覗いてVRCでのフルトラッキング確認済み。\n\n改変及び商用利用も可能。\n素体、パーツを他のアバターへ使用することも許可しています。\n\n\nモデル、テクスチャーの再配布、販売は改変の有無を問わず禁止です。\n特定個人や団体への中傷を目的とした利用も当然ながら禁止します。\n\n詳しくは後述の利用規約を参照。\n\n\n","url":"https://booth.pm/ja/items/1078191","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2000"},"image":"https://booth.pximg.net/c/620x620/64446b0b-9225-4dba-a979-4708b93cc2ef/i/1078191/29c4a6e7-18f0-49e9-84bf-ac017190df86_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="cBj8hbp54M9XHFLPvdgIMXMAy7Ud1+eLmAZMTvHXflA="></script>
+    nonce="D2/uXoFu+tHF96lIxHTtFPmGLvBd524kZc4eF3CK5Lo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1078191/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               135
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1078191/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               135
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
