--- a/VRChat/58/1078158.html
+++ b/VRChat/58/1078158.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "jjhZq86cGVPDbdFyILXAx7QJxrx/peM2IrQ1Fp4zUaQ="></script>
+    "CAy01iuKMhNFprKHXWq7qZgeHR4BKZV6FDBZFJEXeYI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"スフレチーズケーキ【３Dモデル】","description":"【説明】\nスフレチーズケーキの3Dモデルです。\nmetalicテクスチャとnormalmapテクスチャでリアルな質感に仕上がっています。\nマイワールドのテーブルの上にお一ついかがでしょうか？\n\n△ポリゴン：1528\n\n【ファイル内容】\nチーズケーキ本体、皿、フォークのfbxファイルとテクスチャファイル、unitypackageファイルが同封してあります。\n\n\n【利用について】\n・この商品を主体とする再配布を除き、商用・非商用問わずいかなる用途にもお使いいただけます。","url":"https://booth.pm/ja/items/1078158","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/12d291ee-7368-4fb1-bc8b-4bf670ee558a/i/1078158/327276f6-bb1d-4838-bbac-39cf9da6aba8_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="jjhZq86cGVPDbdFyILXAx7QJxrx/peM2IrQ1Fp4zUaQ="></script>
+    nonce="CAy01iuKMhNFprKHXWq7qZgeHR4BKZV6FDBZFJEXeYI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -141,6 +141,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -184,7 +186,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1078158/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               111
@@ -199,14 +201,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1078158/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               111
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
