--- a/VRChat/14/1077614.html
+++ b/VRChat/14/1077614.html
@@ -98,9 +98,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Um9e2oyc4AdVQJBVBwg4H8AdCRO4H95bSIlpQrXSlRY="></script>
+    "sLXgCUN72OaeVZ4WfH03fhq8u5OASM7tbNU3Aua1m7E="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"短刀「灰氷」","description":"VRChat向けの３D武器モデルデータです。\n北方の民族風の文様を施した短刀で、狩りの場面から儀式までなんでも使えます。\n\n△ポリゴン３４４と低ポリですが、こだわった刃紋のテクスチャなど見所がいっぱいです！\n\nver1.1\n鞘をUnityだけで表示非表示できない不具合を解消","url":"https://booth.pm/ja/items/1077614","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/9b92b4aa-727e-4ad3-8a66-111e77c11365/i/1077614/809a4bf0-4f82-481b-aa71-c2c2a881b997_base_resized.jpg"}
     </script>
@@ -111,7 +111,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Um9e2oyc4AdVQJBVBwg4H8AdCRO4H95bSIlpQrXSlRY="></script>
+    nonce="sLXgCUN72OaeVZ4WfH03fhq8u5OASM7tbNU3Aua1m7E="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -135,6 +135,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -178,7 +180,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1077614/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               109
@@ -193,14 +195,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1077614/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               109
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
