--- a/VRChat/38/1077438.html
+++ b/VRChat/38/1077438.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "+597VteefzQQQG2UoJOXFrq06lkcGk753mQ630hQveA="></script>
+    "J2LL834bqxTmK4tqCGGunNEf2kFQUdPRBY786lR3iec="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"旗　3Dモデル","description":"旗(Flag) 3Dモデルの紹介\n\n\n本モデルは【VRChat】向けに作成した旗です。\n何かを宣伝したい方、応援したい方など使い道はいろいろあると思います。\n\nぜひ使ってやってください。\n(使用の際は装飾を回したり、旗部分を布設定がついたFlag_fullをお使いください。)\n\n\n●内容物\n\n・Flag.unitypackage\n・FBXデータ,Blenderファイル,UVファイル(png)\n・画像資料\n・Readme\n\n\n------------------------------\n\n●利用条件\n\n・本モデルの営利利用目的は可\n・本モデルの改変は可\n\n\n●免責事項\n\n・本データを使用し、何れかの不都合が生じたとしても当方は責任を負いかねますのでご了承ください。\n\n\n■禁止事項\n\n・公序良俗に反する行為、政治・宗教活動、誹謗中傷目的での使用\n\n------------------------------\n\n貧相なモデルですが使っていただければ嬉しく思います。\n\n何かあれば下記までご連絡ください。\nTwitter:ケーキ@VRChatter(@keiki002)\nhttps://twitter.com/keiki002","url":"https://booth.pm/ja/items/1077438","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/266c358f-8e7e-41bc-bd4e-a1da54b572e7/i/1077438/6061a91a-eea2-4657-85c4-7297724d16bb_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="+597VteefzQQQG2UoJOXFrq06lkcGk753mQ630hQveA="></script>
+    nonce="J2LL834bqxTmK4tqCGGunNEf2kFQUdPRBY786lR3iec="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -117,6 +117,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -160,7 +162,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1077438/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               133
@@ -175,14 +177,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1077438/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               133
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
