--- a/VRChat/55/1076755.html
+++ b/VRChat/55/1076755.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "PuclbFFCTSKOzAbwBxhntSuUWHDwXzRhXW/zrUqIMIE="></script>
+    "HrIvs2eXbq1Z5MEKIYfDUIfUEH+dhuffcGOLLj5vREw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル「ヤギコ」","description":"【お知らせ】\n購入者のうち一部の方がアップデートバージョンを受け取ることができない状態になっております。お手数ですが新しく追加した再購入用のバリエーションからDLをお願いします。内容は通常版と同一の状態です。\nまた、アバターを未購入の方も無料版からDLできますのでご自由にどうぞ。\n\n■モデル説明\n本モデルはHumanoid形式のオリジナル３Dモデル『ヤギコ』です。\nVRchatでの使用を想定しています。\n\n郵便屋さんのヤギの女の子です。\n\n\nフルボディトラッキングでの動作は確認しておりません\nLip Sync：20種（VRchat標準+MMD標準）\nシェイプキー（一部名称はMMD形式に倣っています）\nEyeTracking対応\nDynamic Bone対応（前髪、おさげ、耳、尻尾、スカート）\n","url":"https://booth.pm/ja/items/1076755","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"800"},"image":"https://booth.pximg.net/c/620x620/c0f46913-ee1e-4dbc-813f-7145553a5b74/i/1076755/8b006431-e494-4aaa-b59a-0b31ea77eb26_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="PuclbFFCTSKOzAbwBxhntSuUWHDwXzRhXW/zrUqIMIE="></script>
+    nonce="HrIvs2eXbq1Z5MEKIYfDUIfUEH+dhuffcGOLLj5vREw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1076755/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               827
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1076755/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               827
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
