--- a/VRChat/18/1076918.html
+++ b/VRChat/18/1076918.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "RjHpiFJJv0uelXYtMcmCoxyRZaQ78PbfLiKVDgwE5F8="></script>
+    "oTsRBs/JLZknO7d06P9Xc6pmQQz7wr93Vrs58Mc9WGQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"武器/装備セット4","description":"■VRChat向けの武器セット第4弾\n・X/EMGL-01A（電磁加速ガンランチャー）\n試作型の電磁加速方式を用いたガンランチャー(砲/発射器複合装備)。\n\n・グレネード・ライフル(突撃型自動擲弾砲)\n大口径榴弾を発射可能な自動砲。レバー・アクション用のアーム付き\n\n・EMパイルバンカー\n電磁加速によって杭を打ち出す近接戦闘装備。\n\n・多目的ミサイル・ランチャー/統合多目的ミサイル\n汎用ミサイル・システム。ミサイルランチャーを連結可能。ランチャー内のミサイルは見た目用のダミー（非表示にできます）。\n射出後を再現するためのミサイルが付属。ミサイルの外装部分は展開して安定翼になります\n\n・CIWS-01D(近接戦闘用高周波ナイフ)\nナイフタイプの高周波ブレード。鞘が付属します\n\n・ディスク・レドーム\n複合センサーと高性能レーダーを統合したオプション装備。レドーム部分は回転させられます\n\n・スタビライザー・ウィング\n可動式アームを備えた安定翼ユニット。\n\n　UTS2.0対応(Packageを使用する際は予めUTS2.0を入れてください) Packageを導入することでマテリアル設定済になったものが取り込めます\n\n■ポリゴン数\nX/EMGL-01A：1,782\nグレネード・ライフル：1,786\nEMパイルバンカー：1,154\n多目的ミサイルランチャー：491\n多目的ミサイル：1,112\nCIWS-01D(本体)：352\nCIWS-01D(鞘)：260\nディスク・レドーム：1,220\nスタビライザー・ウィング：1,004　\n　(ポリゴン数が多いためAnimation Overrideでの表示を推奨します)\n\n■禁止事項：再配布、自作発言","url":"https://booth.pm/ja/items/1076918","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/4c0b8e4e-23ce-4b6b-91ae-c803cad67328/i/1076918/1e7280c0-9d62-4bdf-af74-721182e437c6_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="RjHpiFJJv0uelXYtMcmCoxyRZaQ78PbfLiKVDgwE5F8="></script>
+    nonce="oTsRBs/JLZknO7d06P9Xc6pmQQz7wr93Vrs58Mc9WGQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,10 +160,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1076918/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              215
+                              216
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1076918/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              215
+                              216
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
